package io.github.fontysvenlo.ais.datarecords;

public record PricePerKmData(Integer price) {
}
